Slider added and some minor changes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Internet agency of Teriam</title>
+	
+	<link rel="stylesheet" href="css/slick.css">
+	<link rel="stylesheet" href="css/slick-theme.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <div class="body-wrap">
+	
 <!-- Fixed menu -->
-<div class="aside-block">
+<div class="aside-block"></div>
+
+<!-- Background and title -->
+	<section class="bgr">
+		<div class="title">
+			<h2>Internet Agency of Teriam</h2>
+			<h3>Разработка</h3>
+			<h3>Продвижение</h3>
+		</div>
+	</section>
+
 	<nav class="fixed-menu">
 		<ul class="menu-items">
 			<li class="menu-item"><a href="#">Разработка сайтов</a></li>
@@ -25,16 +39,9 @@
 			<li class="contacts">something@mail.com</li>
 		</ul>
 	</nav>
-</div>
+
 <div class="main-block">
-<!-- Background and title -->
-	<section class="bgr">
-		<div class="title">
-			<h2>Internet Agency of Teriam</h2>
-			<h3>Разработка</h3>
-			<h3>Продвижение</h3>
-		</div>
-	</section>
+
 <!-- Our advantages -->
 	<section class="advantages">
 		<div class="adv-header">
@@ -84,20 +91,48 @@
 				<p>Стоимость услуги: От 30 000 рублей</p></span>
 				<button>Заказать</button>
 			</div>
+
+			<div class="slider-content">
+				<h2>Наши цены</h2>
+				<h3>Создать сайт в короткие сроки</h3>
+				<span><p>Создание сайта в короткие сроки не каким образом не повлияет на качество работы, лишь ускорить её. Данный вариант занимает сроки выполнения от 1 до 3 дней. Работа выполняется несколькими командами профессиональных кадров.</p>
+				<p>Стоимость услуги: От 30 000 рублей</p></span>
+				<button>Заказать</button>
+			</div>
+
+			<div class="slider-content">
+				<h2>Наши цены</h2>
+				<h3>Создать сайт в короткие сроки</h3>
+				<span><p>Создание сайта в короткие сроки не каким образом не повлияет на качество работы, лишь ускорить её. Данный вариант занимает сроки выполнения от 1 до 3 дней. Работа выполняется несколькими командами профессиональных кадров.</p>
+				<p>Стоимость услуги: От 30 000 рублей</p></span>
+				<button>Заказать</button>
+			</div>
+
+			<div class="slider-content">
+				<h2>Наши цены</h2>
+				<h3>Создать сайт в короткие сроки</h3>
+				<span><p>Создание сайта в короткие сроки не каким образом не повлияет на качество работы, лишь ускорить её. Данный вариант занимает сроки выполнения от 1 до 3 дней. Работа выполняется несколькими командами профессиональных кадров.</p>
+				<p>Стоимость услуги: От 30 000 рублей</p></span>
+				<button>Заказать</button>
+			</div>
 		</div>
 	</section>
 
 	<section class="our-contacts">
 		<h2>Контакты</h2>
 		<form action="">
-			<input type="text" placeholder="Ваше имя"><br>
-			<input type="phone" placeholder="Телефон"><br>
-			<input type="email" placeholder="email"><br>
-			<input type="textarea" placeholder="Комментарий"><br>			
+			<p><input type="text" placeholder="Ваше имя"></p>
+			<p><input type="phone" placeholder="Телефон"></p>
+			<p><input type="email" placeholder="email"></p>
+			<p><textarea rows="10" cols="118">Комментарий</textarea></p>
+			<button type="submit" class="contact-btn">Отправить</button>
 		</form>
-		<button class="contact-btn" type="submit">Отправить</button>
+		
 	</section>
 </div><!--main-block-->
 </div><!--body-wrap-->
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
