Чуток подправил хэдер

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div>
 				<div class="block-wrap col col-lg-12 col-md-12 col-sm-12 offset-xl-0 offset-lg-0">
 					<header id="site-dev">
-						<div class="header__title">
+						<div class="header__title pb-5">
 							<h1>Internet Agency of Teriam</h1>
 							<p>Разработка</p>
 							<p>Продвижение</p>
